--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </a> <!-- Github profile Link-->
 
           <a
-            href="www.linkedin.com/in/aditya-subash-a3a681316" target="_blank"  
+            href="https://www.linkedin.com/in/aditya-subash-a3a681316/" target="_blank"  
             aria-label="linkedin"
             class="link link--icon"
           > 
@@ -119,21 +119,15 @@
             </ul>
 
             <a
-              href="https://github.com/ashiksanyo10/Russia-Ukraine_War_EDA" target="_blank"
+              href="#project" target="_blank"
               aria-label="source code"
               class="link link--icon"
             >  <!--Project link-->
 
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            > <!--Project demo or git link-->
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
-          </div>
+            
+          </div> 
         </div>
       </div>
     </div>
